--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 lxml==4.9.0
-PIL==9.1.0
-torch==1.11.0+cu113
-torchmetrics==0.8.2
 pyrogram==2.0.24
-torchserve==0.6.0
-torch-model-archiver==0.6.0
+torchmetrics==0.8.2
 tabulate==0.8.9
+scikit-learn==1.1.1
+numpy==1.22.3
+facenet-pytorch==2.5.2
